RESOLVED FIXED306009
Address unsafe cast warnings under Source/WebCore/domjit/
https://bugs.webkit.org/show_bug.cgi?id=306009
Summary Address unsafe cast warnings under Source/WebCore/domjit/
Chris Dumez
Reported 2026-01-21 23:50:47 PST
Address unsafe cast warnings under Source/WebCore/domjit/.
Attachments
Chris Dumez
Comment 1 2026-01-21 23:58:06 PST
EWS
Comment 2 2026-01-22 17:10:08 PST
Committed 306052@main (d824ca0ba834): <https://commits.webkit.org/306052@main> Reviewed commits have been landed. Closing PR #57033 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-22 17:11:13 PST
Note You need to log in before you can comment on or make changes to this bug.