Address unsafe cast warnings under Source/WebCore/domjit/ https://bugs.webkit.org/show_bug.cgi?id=306009

Reviewed by Ryosuke Niwa.

* Source/WTF/wtf/StdLibExtras.h:
* Source/WebCore/SaferCPPExpectations/MemoryUnsafeCastCheckerExpectations:
* Source/WebCore/domjit/DOMJITHelpers.h:
(WebCore::DOMJIT::toWrapperSlowImpl):
* Source/WebCore/domjit/JSDocumentDOMJIT.cpp:
(WebCore::compileDocumentBodyAttribute):
* Source/WebCore/domjit/JSNodeDOMJIT.cpp:
(WebCore::compileNodeFirstChildAttribute):
(WebCore::compileNodeLastChildAttribute):
(WebCore::compileNodeOwnerDocumentAttribute):

Canonical link: https://commits.webkit.org/306052@main